--- a/index.html
+++ b/index.html
@@ -28,7 +28,22 @@
     </section>
     <section>
         <h2>Algo #3</h2>
-        <p>3. Print Ints and Sum 0-255 printIntsAndSum0To255() Print integers from 0 to 255, and with each integer print the sum so far</p>
+        <p>Print Ints and Sum 0-255 printIntsAndSum0To255() Print integers from 0 to 255, and with each integer print the sum so far</p>
+        <button onclick="printOdds1To255()">See the Answer</button>
+    </section>
+    <section>
+        <h2>4. Iterate and Print Array</h2>
+        <p>printArrayVals(arr) Iterate through a given array, printing each value.</p>
+        <button onclick="printOdds1To255()">See the Answer</button>
+    </section>
+    <section>
+        <h2>5. Find and Print Max</h2>
+        <p>printMaxOfArray(arr) Given an array, find and print its largest element.</p>
+        <button onclick="printOdds1To255()">See the Answer</button>
+    </section>
+    <section>
+        <h2>6. Get and Print Average</h2>
+        <p>printAverageOfArray(arr) Analyze an array's values and print the average.</p>
         <button onclick="printOdds1To255()">See the Answer</button>
     </section>
 <script src="/script.js"></script>
