forgot the html

--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
         <p>printAverageOfArray(arr) Analyze an array's values and print the average.</p>
         <button onclick="printOdds1To255()">See the Answer</button>
     </section>
+    <section>
+        <h2>7. Array with Odds</h2>
+        <p>returnOddsArray1To255() Create an array with all the odd integers between 1 and 255 (inclusive).</p>
+        <button onclick="printOdds1To255()">See the Answer</button>
+    </section>
+    <section>
+        <h2>8. Square the Values</h2>
+        <p>rsquareArrayVals(arr) Square each value in a given array, returning that same array with changed values.</p>
+        <button onclick="printOdds1To255()">See the Answer</button>
+    </section>
 <script src="/script.js"></script>
 </body>
 
