--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
         <p>rsquareArrayVals(arr) Square each value in a given array, returning that same array with changed values.</p>
         <button onclick="printOdds1To255()">See the Answer</button>
     </section>
+    <section>
+        <h2>9. Greater than Y</h2>
+        <p>printArrayCountGreaterThanY(arr, y) number of array values greater than Y.</p>
+        <button onclick="printOdds1To255()">See the Answer</button>
+    </section>
+    <section>
+        <h2>10. Zero Out Negative Numbers</h2>
+        <p>zeroOutArrayNegativeVals(arr) Return the given array, after setting any negative values to zero.</p>
+        <button onclick="printOdds1To255()">See the Answer</button>
+    </section>
+    <h2>11. Max, Min, Average</h2>
+    <p>printMaxMinAverageArrayVals(arr) Given an array, print the max, min and average values for that array.</p>
+    <button onclick="printOdds1To255()">See the Answer</button>
+</section>
+
 <script src="/script.js"></script>
 </body>
 
