--- a/index.html
+++ b/index.html
@@ -66,10 +66,17 @@
         <p>zeroOutArrayNegativeVals(arr) Return the given array, after setting any negative values to zero.</p>
         <button onclick="printOdds1To255()">See the Answer</button>
     </section>
-    <h2>11. Max, Min, Average</h2>
-    <p>printMaxMinAverageArrayVals(arr) Given an array, print the max, min and average values for that array.</p>
-    <button onclick="printOdds1To255()">See the Answer</button>
-</section>
+    <section>
+        <h2>11. Max, Min, Average</h2>
+        <p>printMaxMinAverageArrayVals(arr) Given an array, print the max, min and average values for that array.</p>
+        <button onclick="printOdds1To255()">See the Answer</button>
+    </section>
+    <section>
+        <h2>12. Shift Array Values</h2>
+        <p>shiftArrayValsLeft(arr)
+            Given an array, move all values forward (to the left) by one index, dropping the first value and leaving a 0 (zero) value at the end of the array.</p>
+        <button onclick="printOdds1To255()">See the Answer</button>
+    </section>
 
 <script src="/script.js"></script>
 </body>
