--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
             Given an array, move all values forward (to the left) by one index, dropping the first value and leaving a 0 (zero) value at the end of the array.</p>
         <button onclick="printOdds1To255()">See the Answer</button>
     </section>
+    <section>
+        <h2>13. Swap String For Array Negative Values</h2>
+        <p>swapStringForArrayNegativeVals(arr) Given an array of numbers, replace any negative values with the string 'Dojo'.</p>
+        <button onclick="printOdds1To255()">See the Answer</button>
+    </section>
 
 <script src="/script.js"></script>
 </body>
